@@ -32,6 +32,8 @@ PIG-2207: Support custom counters for aggregating warnings from different udfs (
 
 IMPROVEMENTS
 
+PIG-3954: Document use of user level jar cache (aniket486)
+
 PIG-3752: Fix e2e Parallel test for Windows (daijy)
 
 PIG-3966: Document variable input arguments of UDFs (lbendig via aniket486)
